@@ -1,7 +1,6 @@
 package dropgoline.ui;
 
 import java.io.File;
-import java.security.Key;
 import java.util.List;
 
 import javafx.animation.Interpolator;
@@ -15,7 +14,6 @@ import javafx.scene.control.ContextMenu;
 import javafx.scene.control.Label;
 import javafx.scene.control.MenuItem;
 import javafx.scene.control.ProgressBar;
-import javafx.scene.control.TextField;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.image.Image;
@@ -35,24 +33,10 @@ public class ModernCard extends StackPane {
 
     private String dragText = null;
     private File dragFile = null;
-    private String pendingOfferId;
 
     private MenuItem downloadItem;
     private Runnable onDownloadRequest;
     private Runnable onHistoryRequest;
-    private java.util.function.Consumer<File> onFileDropped;
-
-    public void setOnFileDropped(java.util.function.Consumer<File> handler) {
-        this.onFileDropped = handler;
-    }
-    
-
-    public void setPendingFile(String Id) {
-        this.pendingOfferId = Id;
-    }
-
-    public String getPendingOfferId() { return pendingOfferId; }
-
 
     public ModernCard(String name) {
         this.peername = name;
@@ -93,115 +77,25 @@ public class ModernCard extends StackPane {
 
         setPrefSize(200, 150);
 
-        setupDragReceiving();
         setupDragSource();
         setupContextMenu();
         setupHoverAnimation();
     }
 
-    private void setupDragReceiving() {
-        setOnDragOver(event -> {
-            Dragboard db = event.getDragboard();
-            if (db.hasFiles() || db.hasString()) {
-                event.acceptTransferModes(TransferMode.COPY);
-            }
-            event.consume();
-        });
-
-        setOnDragEntered(event -> {
-            Dragboard db = event.getDragboard();
-            if (db.hasFiles() || db.hasString()) {
-                getStyleClass().add("drag-over");
-            }
-            event.consume();
-        });
-
-        setOnDragOver(event -> {
-            if (event.getGestureSource() != this && (event.getDragboard().hasFiles() || event.getDragboard().hasString())) {
-            event.acceptTransferModes(TransferMode.COPY_OR_MOVE);
-        }
-            getStyleClass().add("drag-over"); // 如果你有定義 CSS 樣式
-            event.consume();
-        });
-
-        setOnDragExited(event -> {
-            getStyleClass().remove("drag-over");
-            event.consume();
-        });
-
-        // setOnDragDropped(event -> {
-        //     Dragboard db = event.getDragboard();
-        //     if (db.hasFiles()) {
-        //         File file = db.getFiles().get(0);
-                
-        //         if (onFileDropped != null) {
-        //             onFileDropped.accept(file);
-        //         }
-                
-        //         event.setDropCompleted(true);
-        //     }
-        //     getStyleClass().remove("drag-over");
-        //     event.consume();
-        // });
-
-        setOnDragDropped(event -> {
-        Dragboard db = event.getDragboard();
-        boolean success = false;
-
-        if (db.hasFiles()) {
-            File file = db.getFiles().get(0);
-            if (onFileDropped != null) {
-                onFileDropped.accept(file);
-                success = true;
-            }
-        } 
-        // 【新增】：處理文字拖曳
-        else if (db.hasString()) {
-            String text = db.getString();
-            if (onTextDropped != null) {
-                onTextDropped.accept(text);
-                success = true;
-            }
-        }
-
-        event.setDropCompleted(success);
-        getStyleClass().remove("drag-over");
-        event.consume();
-    });
-        
-
-    }
-
-    private java.util.function.Consumer<String> onTextDropped;
-
-    public void setOnTextDropped(java.util.function.Consumer<String> handler) {
-        this.onTextDropped = handler;
-    }
 
     private void setupDragSource() {
         setOnDragDetected(event -> {
-            if ((dragFile != null && dragFile.exists()) || (dragText != null && !dragText.isEmpty())) {
-                Dragboard db = this.startDragAndDrop(TransferMode.COPY);
-                ClipboardContent content = new ClipboardContent();
-
-                // 如果有檔案，放檔案；如果有文字，放文字
-                if (dragFile != null && dragFile.exists()) {
-                    content.putFiles(java.util.Collections.singletonList(dragFile));
-                } else if (dragText != null) {
-                    content.putString(dragText);
-                }
-                
-                db.setContent(content);
+            ClipboardContent content = new ClipboardContent();
+            if (dragFile != null) {
+                content.putFiles(List.of(dragFile));
+            } else if (dragText != null && !dragText.isEmpty()) {
+                content.putString(dragText);
+            } else {
                 event.consume();
+                return;
             }
-        });
-
-        setOnDragDone(event -> {
-            if (event.getTransferMode() == TransferMode.COPY) {
-                // 文字拖走後，清空 UI
-                this.setText("尚無訊息");
-                this.dragText = null;
-            }
+            Dragboard db = startDragAndDrop(TransferMode.COPY);
+            db.setContent(content);
             event.consume();
         });
     }
